--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
         <li><a href="#" class="site-navigation-link">Карта штата</a></li>
         <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
       </ul>
-      <a class="main-header-logo">
-        <img a href="#" src="#" width="138" height="70" alt="Логотип сайта городка Седона">
+      <a class="main-header-logo" href="index.html">
+        <img src="img/logo.png" width="138" height="70" alt="Логотип сайта городка Седона">
       </a>
     </nav>
   </header>
 
   <main class="main-content">
-    <img src="#" width="1200" height="509" alt="Добро пожаловать в Седону">
+    <img src="img/background photo.jpg" width="1200" height="509" alt="Фотофон на котором изображена горная местность">
+    <img src="img/welcome.png" width="456.65" height="350.88" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
     <h1 class="main-content-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <p class="text-grey main-content-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 
@@ -33,26 +34,32 @@
       <h2 class="text-white advantages-title">Настоящий городок</h3>
         <span class="text-white advantages-number">-№1-</span>
         <p class="text-white advantages-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-        <img src="#" width="800" height="256" alt="Настоящий городок">
+        <img src="img/image.jpg" width="800" height="256" alt="Фотография городка">
     </div>
 
-    <dl class="advice">
-      <dt class="advice-title">Жильё</dt>
-      <dd class="text-grey advice-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</dd>
-      <dt class="advice-title">Еда</dt>
-      <dd class="text-grey advice-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</dd>
-      <dt class="advice-title">Сувениры</dt>
-      <dd class="text-grey advice-text">Не только китайского, но и местного производства!</dd>
-    </dl>
+    <ul class="advice">
+      <li>
+        <h2 class="advice-title">Жильё</h2>
+        <p class="text-grey advice-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      </li>
+      <li>
+        <h2 class="advice-title">Еда</h2>
+        <p class="text-grey advice-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      </li>
+      <li>
+        <h2 class="advice-title">Сувениры</h2>
+        <p class="text-grey advice-text">Не только китайского, но и местного производства!</p>
+      </li>
+    </ul>
 
     <div class="advantages background-blue">
-      <img src="#" width="800" height="256" alt="мост дьявола">
+      <img src="img/image-2.jpg" width="800" height="256" alt="Достопримечательность - мост дьявола">
       <h2 class="text-white advantages-title">Там есть Мост дьявола</h2>
       <span class="text-white advantages-number">-№2-</span>
       <p class="text-white advantages-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
     </div>
 
-    <article class="advantages background-grey">
+    <article class="advantages-background-grey">
       <div class="advantages">
         <h2 class="advantages-title">Небольшая площадь</h2>
         <span class="advantages-number text-grey">-№3-</span>
@@ -82,11 +89,11 @@
         <label class="search-form text-white">Поиск гостиницы в Седоне</label>
         <p>
           <label>Дата заезда:</label>
-          <input type="date" id="date" name="date" value="24 апреля 2017">
+          <input type="text" id="date" name="data" value="24 апреля 2017">
         </p>
         <p>
           <label>Дата выезда:</label>
-          <input type="date" id="date" name="date" value="2017-июля-04">
+          <input type="text" id="date" name="data" value="04 июля 2017">
         </p>
         <p>
           <label>Взрослые:</label>
@@ -98,7 +105,7 @@
       </form>
     </section>
 
-    <img src="#" width="1119" height="594" alt="Карта Седоны">
+    <img src="img/map.jpg" width="1119" height="594" alt="Карта Седоны">
 
   </main>
 
@@ -124,8 +131,8 @@
     </ul>
 
     <div class="author">
-      <span class="author">Website by:</span>
-      <a href="https://htmlacademy.ru/intensive/htmlcss" class="author-link"><img src="#"
+      <span class="website-by">Website by:</span>
+      <a href="https://htmlacademy.ru/intensive/htmlcss" class="author-link"><img src="img/logo-htmlacademy.png"
           alt="Логотип HTML академии"></a>
     </div>
 
