Графика всех страниц
Внесены изменения в названия изображений. Фотографии с лишними элементами перезалиты.

--- a/hotels.html
+++ b/hotels.html
@@ -27,6 +27,7 @@
   <main class="main-content">
     <article class="housing-parameters text-white">
       <!-- ФОРМА инфраструктура и типы жилья-->
+      <img src="img/background-hotels.jpg" width="1200" height="217" alt="Фотофон на котором изображена размытая горная местность">
       <form action="#" method="get">
         <fieldset>
           <legend class="infrastructure-title">Инфраструктура:</legend>
@@ -79,7 +80,7 @@
 
     <ul class="hotel-results">
       <li>
-        <a href="#"><img src="img/Layer 21.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
+        <a href="#"><img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
         <a href="#">
           <h2 class="hotel-items">Amara Resort & Spa</h2>
         </a>
@@ -99,7 +100,7 @@
         </div>
       </li>
       <li>
-        <a href="#"><img src="img/Layer 89 copy.jpg" width="135" height="90" alt="Desert Quail Inn"></a>
+        <a href="#"><img src="img/desert.jpg" width="135" height="90" alt="Desert Quail Inn"></a>
         <a href="#">
           <h2 class="hotel-items">Desert Quail Inn</h2>
         </a>
@@ -117,7 +118,7 @@
         </div>
       </li>
       <li>
-        <a href="#"><img src="img/Rectangle.jpg" width="135" height="90" alt="Villas at Poco Diablo"></a>
+        <a href="#"><img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo"></a>
         <a href="#">
           <h2 class="hotel-items">Villas at Poco Diablo</h2>
         </a>
@@ -158,7 +159,7 @@
 
     <div class="author">
       <span class="author">Website by:</span>
-      <a href="https://htmlacademy.ru/intensive/htmlcss" class="author-link"><img src="img/logo-htmlacademy.png"
+      <a href="https://htmlacademy.ru/intensive/htmlcss" class="author-link"><img src="img/logo-htmlacademy.svg"
           alt="Логотип HTML академии"></a>
     </div>
 
