--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <main class="main-content">
-    <img src="img/background photo.jpg" width="1200" height="509" alt="Фотофон на котором изображена горная местность">
+    <img src="img/background-sedona.jpg" width="1200" height="509" alt="Фотофон на котором изображена горная местность">
     <img src="img/welcome.png" width="456.65" height="350.88" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
     <h1 class="main-content-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <p class="text-grey main-content-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -34,7 +34,7 @@
       <h2 class="text-white advantages-title">Настоящий городок</h3>
         <span class="text-white advantages-number">-№1-</span>
         <p class="text-white advantages-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-        <img src="img/image.jpg" width="800" height="256" alt="Фотография городка">
+        <img src="img/town.jpg" width="800" height="256" alt="Фотография городка">
     </div>
 
     <ul class="advice">
@@ -53,7 +53,7 @@
     </ul>
 
     <div class="advantages background-blue">
-      <img src="img/image-2.jpg" width="800" height="256" alt="Достопримечательность - мост дьявола">
+      <img src="img/bridge.jpg" width="800" height="256" alt="Достопримечательность - мост дьявола">
       <h2 class="text-white advantages-title">Там есть Мост дьявола</h2>
       <span class="text-white advantages-number">-№2-</span>
       <p class="text-white advantages-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
@@ -132,7 +132,7 @@
 
     <div class="author">
       <span class="website-by">Website by:</span>
-      <a href="https://htmlacademy.ru/intensive/htmlcss" class="author-link"><img src="img/logo-htmlacademy.png"
+      <a href="https://htmlacademy.ru/intensive/htmlcss" class="author-link"><img src="img/logo-htmlacademy.svg"
           alt="Логотип HTML академии"></a>
     </div>
 
