--- a/index.html
+++ b/index.html
@@ -9,24 +9,31 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="page-body">
   <header class="main-header">
     <nav class="navigation">
-      <ul class="site-navigation">
-        <li><a href="#" class="site-navigation-link">Информация</a></li>
-        <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
-        <li><a href="#" class="site-navigation-link">Карта штата</a></li>
-        <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
-      </ul>
       <a class="main-header-logo" href="index.html">
         <img src="img/logo.png" width="138" height="70" alt="Логотип сайта городка Седона">
       </a>
+      <!--<div class="main-navigation-wrapper">-->
+      <div class="main-header-bar">
+
+        <ul class="site-navigation">
+          <li><a href="#" class="site-navigation-link">Информация</a></li>
+          <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
+          <li><a href="#" class="site-navigation-link">Карта штата</a></li>
+          <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
 
   <main class="main-content">
+    <div class="container-foto-title">
     <img src="img/background-sedona.jpg" width="1200" height="509" alt="Фотофон на котором изображена горная местность">
-    <img src="img/welcome.png" width="456.65" height="350.88" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
+    <img src="img/welcome.png" width="456.65" height="350.88"
+      alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
+    </div>  
     <h1 class="main-content-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <p class="text-grey main-content-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 
