--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
       <a class="main-header-logo" href="index.html">
         <img src="img/logo.png" width="138" height="70" alt="Логотип сайта городка Седона">
       </a>
-      <!--<div class="main-navigation-wrapper">-->
       <div class="main-header-bar">
-
         <ul class="site-navigation">
           <li><a href="#" class="site-navigation-link">Информация</a></li>
           <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
@@ -28,70 +26,76 @@
     </nav>
   </header>
 
-  <main class="main-content">
-    <div class="container-foto-title">
-    <img src="img/background-sedona.jpg" width="1200" height="509" alt="Фотофон на котором изображена горная местность">
-    <img src="img/welcome.png" width="456.65" height="350.88"
-      alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
-    </div>  
-    <h1 class="main-content-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-    <p class="text-grey main-content-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-
-    <div class="advantages background-blue">
-      <h2 class="text-white advantages-title">Настоящий городок</h3>
-        <span class="text-white advantages-number">-№1-</span>
-        <p class="text-white advantages-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-        <img src="img/town.jpg" width="800" height="256" alt="Фотография городка">
+  <main class="container">
+    <div class="container-photo-title">
+      <img class="photo" src="img/background-sedona.jpg" width="1200" height="509"
+        alt="Фотофон на котором изображена горная местность">
+      <img class="welcome" src="img/welcome.png" width="456.65" height="350.88"
+        alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
     </div>
-
-    <ul class="advice">
-      <li>
-        <h2 class="advice-title">Жильё</h2>
-        <p class="text-grey advice-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-      </li>
-      <li>
-        <h2 class="advice-title">Еда</h2>
-        <p class="text-grey advice-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-      </li>
-      <li>
-        <h2 class="advice-title">Сувениры</h2>
-        <p class="text-grey advice-text">Не только китайского, но и местного производства!</p>
-      </li>
-    </ul>
-
-    <div class="advantages background-blue">
-      <img src="img/bridge.jpg" width="800" height="256" alt="Достопримечательность - мост дьявола">
-      <h2 class="text-white advantages-title">Там есть Мост дьявола</h2>
-      <span class="text-white advantages-number">-№2-</span>
-      <p class="text-white advantages-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+    <div class="main-title">
+      <h1 class="main-content-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <p class="text-grey main-content-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </div>
-
-    <article class="advantages-background-grey">
-      <div class="advantages">
-        <h2 class="advantages-title">Небольшая площадь</h2>
-        <span class="advantages-number text-grey">-№3-</span>
-        <p class="advantages-text text-grey">все достопримечательности находятся очень близко</p>
-      </div>
-
-      <div class="advantages">
-        <h2 class="advantages-title">Красивая дорога</h2>
-        <span class="advantages-number text-grey">-№4-</span>
-        <p class="advantages-text text-grey">ехать в Седону из лас-вегаса совсем не скучно!</p>
-      </div>
-
-      <div class="advantages">
-        <h2 class="advantages-title">Мало туристов</h2>
-        <span class="advantages-number text-grey">-№5-</span>
-        <p class="advantages-text text-grey">большинство едет в гранд каньон и толпится там</p>
-      </div>
-    </article>
-
+    <div class="box">
+      <ul class="advantages-town background-blue">
+        <li class="advantages-list">
+          <h2 class="text-white advantages-title">Настоящий городок</h2>
+          <span class="text-white advantages-number">-№1-</span>
+          <p class="text-white advantages-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+        </li>
+        <li class="advantages-photo">
+          <img src="img/town.jpg" width="800" height="256" alt="Фотография городка">
+        </li>
+      </ul>
+      <ul class="advice">
+        <li>
+          <h2 class="advice-title">Жильё</h2>
+          <p class="text-grey advice-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        </li>
+        <li>
+          <h2 class="advice-title">Еда</h2>
+          <p class="text-grey advice-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li>
+          <h2 class="advice-title">Сувениры</h2>
+          <p class="text-grey advice-text">Не только китайского, но и местного производства!</p>
+        </li>
+      </ul>
+      <ul class="advantages-bridge background-blue">
+        <li class="advantages-photo">
+          <img src="img/bridge.jpg" width="800" height="256" alt="Достопримечательность - мост дьявола">
+        </li>
+        <li class="advantages-list">
+          <h2 class="text-white advantages-title">Там есть Мост дьявола</h2>
+          <span class="text-white advantages-number">-№2-</span>
+          <p class="text-white advantages-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        </li>
+      </ul>
+      <ul class="advantages background-grey">
+        <li class="advantages-list">
+          <h2 class="advantages-title">Небольшая площадь</h2>
+          <span class="advantages-number text-grey">-№3-</span>
+          <p class="advantages-text text-grey">все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="advantages-list">
+          <h2 class="advantages-title">Красивая дорога</h2>
+          <span class="advantages-number text-grey">-№4-</span>
+          <p class="advantages-text text-grey">ехать в Седону из лас-вегаса совсем не скучно!</p>
+        </li>
+        <li class="advantages-list">
+          <h2 class="advantages-title">Мало туристов</h2>
+          <span class="advantages-number text-grey">-№5-</span>
+          <p class="advantages-text text-grey">большинство едет в гранд каньон и толпится там</p>
+        </li>
+      </ul>
+    </div>
+    </div>
     <section class="booking">
       <h3 class="booking-title">Заинтересовались?</h3>
       <p class="booking-text text-grey">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
         гостиниц в Седоне
       </p>
-      <!-- Здесь будет форма поиска гостиниц-->
       <form action="#" method="GET">
         <label class="search-form text-white">Поиск гостиницы в Седоне</label>
         <p>
@@ -111,16 +115,15 @@
         <button class="find-button text-white" type="button">Найти</button>
       </form>
     </section>
-
-    <img src="img/map.jpg" width="1119" height="594" alt="Карта Седоны">
-
+    <div class="map">
+      <img src="img/map.jpg" width="1119" height="594" alt="Карта Седоны">
+    </div>
   </main>
 
   <footer class="main-footer">
-
     <div class="contacts">
-      <p class="contacts-text">#visitsedona</p>
-      <p class="contacts-text">тел:
+      <p class="hashtag">#visitsedona</p>
+      <p class="telephone">тел:
         <a href="tel:+7(495)666-01-66" class="contacts-link"> +7(495)666-01-66</a>
       </p>
     </div>
