Внутренняя страница на гридах
Добавлена сетка для внутренней страницы

--- a/index.html
+++ b/index.html
@@ -15,22 +15,19 @@
       <a class="main-header-logo" href="index.html">
         <img src="img/logo.png" width="138" height="70" alt="Логотип сайта городка Седона">
       </a>
-      <div class="main-header-bar">
+     
         <ul class="site-navigation">
           <li><a href="#" class="site-navigation-link">Информация</a></li>
           <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
           <li><a href="#" class="site-navigation-link">Карта штата</a></li>
           <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
         </ul>
-      </div>
-    </nav>
+          </nav>
   </header>
 
   <main class="container">
     <div class="container-photo-title">
-      <img class="photo" src="img/background-sedona.jpg" width="1200" height="509"
-        alt="Фотофон на котором изображена горная местность">
-      <img class="welcome" src="img/welcome.png" width="456.65" height="350.88"
+      <img class="welcome" src="img/welcome.png"
         alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
     </div>
     <div class="main-title">
