--- a/hotels.html
+++ b/hotels.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -9,88 +9,98 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="page-body">
   <header class="main-header">
     <nav class="navigation">
-      <ul class="site-navigation">
-        <li><a href="#" class="site-navigation-link">Информация</a></li>
-        <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
-        <li><a href="#" class="site-navigation-link">Карта штата</a></li>
-        <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
-      </ul>
       <a class="main-header-logo" href="index.html">
         <img src="img/logo.png" width="138" height="70" alt="Логотип сайта городка Седона">
       </a>
+      <div class="main-header-bar">
+        <ul class="site-navigation">
+          <li><a href="#" class="site-navigation-link">Информация</a></li>
+          <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
+          <li><a href="#" class="site-navigation-link">Карта штата</a></li>
+          <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
 
   <main class="main-content">
     <article class="housing-parameters text-white">
-      <!-- ФОРМА инфраструктура и типы жилья-->
-      <img src="img/background-hotels.jpg" width="1200" height="217" alt="Фотофон на котором изображена размытая горная местность">
-      <form action="#" method="get">
-        <fieldset>
+      <form class="sorting" action="#" method="get">
+        <fieldset class="infrastructure">
           <legend class="infrastructure-title">Инфраструктура:</legend>
-          <label><input type="checkbox" checked name="pool" class="infrastructure-text">
+          <label class="infrastructure-list"><input type="checkbox" checked name="pool" class="infrastructure-text">
             Бассейн</label>
-          <label><input type="checkbox" name="parking" class="infrastructure-text">
+          <label class="infrastructure-list"><input type="checkbox" name="parking" class="infrastructure-text">
             Парковка</label>
-          <label><input type="checkbox" name="wi-fi" class="infrastructure-text"> wi-fi</label>
+          <label class="infrastructure-list"><input type="checkbox" name="wi-fi" class="infrastructure-text">
+            wi-fi</label>
         </fieldset>
-        <fieldset>
+        <fieldset class="type-of-housing">
           <legend class="type-of-housing-title">Тип жилья:</legend>
-          <label><input type="checkbox" checked name="hotel" class="type-of-housing-text">Гостиница</label>
-          <label><input type="checkbox" checked name="motel" class="type-of-housing-text">
+          <label class="infrastructure-list"><input type="checkbox" checked name="hotel"
+              class="type-of-housing-text">Гостиница</label>
+          <label class="infrastructure-list"><input type="checkbox" checked name="motel" class="type-of-housing-text">
             Мотель</label>
-          <label><input type="checkbox" checked name="apartments" class="type-of-housing-text">Апартаменты</label>
+          <label class="infrastructure-list"><input type="checkbox" checked name="apartments"
+              class="type-of-housing-text">Апартаменты</label>
         </fieldset>
-
-        <legend class="prise-slider-title">Стоимость в сутки(р):</legend>
-        <label><input type="text" value="от 0"></label>
-        <label><input type="text" value="до 3000"></label>
         <div class="slider">
-          <input type="range" min="1" max="3000" step="1" class="slider">
+          <legend class="prise-slider-title">Стоимость в сутки(р):</legend>
+          <label><input type="text" value="от 0"></label>
+          <label><input type="text" value="до 3000"></label>
+          <input type="range" min="1" max="3000" step="1">
+          <button class="show-button" type="button">Показать</button>
         </div>
-        <button class="show-button text-white" type="button">Показать</button>
       </form>
     </article>
-    <div class="sorting">
-      <h1 class="sorting-title">Найдено:3</h1>
-      <p class="sorting-subtitle">Сортировка:</p>
-      <ul class="sorting-text-item">
-        <li>
-          <a class="sorting-text-item-price" href="#">По цене</a>
+    <div class="sorting-result">
+      <div class="result">
+        <h1 class="sorting-title">Найдено:3</h1>
+        <p class="sorting-subtitle">Сортировка:</p>
+        <ul class="sorting-text-item">
+          <li>
+            <a class="sorting-text-item-price" href="#">По цене</a>
+          </li>
+          <li>
+            <a class="sorting-text-item-type" href="#">По типу</a>
+          </li>
+          <li>
+            <a class="sorting-text-item-rating" href="#">По рейтингу</a>
+          </li>
+        </ul>
+      </div>
+      <ul class="up-and-down">
+        <li class="up">
+          <a href="#"><img src="" width="11" height="10" alt="Icon up"></a>
         </li>
-        <li>
-          <a class="sorting-text-item-type" href="#">По типу</a>
-        </li>
-        <li>
-          <a class="sorting-text-item-rating" href="#">По рейтингу</a>
+        <li class="down">
+          <a href="#"><img src="" width="11" height="10" alt="Icon down"></a>
         </li>
       </ul>
     </div>
-    <ul class="up-and-down">
-      <li>
-        <a href="#"><img src="" width="11" height="10" alt="Icon up"></a>
-      </li>
-      <li>
-        <a href="#"><img src="" width="11" height="10" alt="Icon down"></a>
-      </li>
-    </ul>
-
     <ul class="hotel-results">
-      <li>
-        <a href="#"><img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
-        <a href="#">
-          <h2 class="hotel-items">Amara Resort & Spa</h2>
-        </a>
-
-        <span>Гостиница</span>
-        <span>от 4000 р</span>
-        <button class="detail-button text-white" type="button">Подробнее</button>
-        <button class="booking-button text-white" type="button">Забронировать</button>
+      <li class="hotel-amara">
+        <div class="amara">
+          <a href="#">
+            <img src="img/amara.jpg" class="photo-amara" width="135" height="90" alt="Amara Resort & Spa">
+          </a>
+          <div class="info-amara">
+            <a href="#">
+              <h2 class="hotel-items">Amara Resort & Spa</h2>
+            </a>
+            <div class="amara-span">
+              <span>Гостиница</span>
+              <span>от 4000 р</span>
+              <button class="detail-button" type="button">Подробнее</button>
+              <button class="booking-button" type="button">Забронировать</button>
+            </div>
+          </div>
+        </div>
         <div class="hotel-rating">
-          <ul class="stars">
+          <ul class="amara-stars">
             <li><img src="#" width="19" height="17"></li>
             <li><img src="#" width="19" height="17"></li>
             <li><img src="#" width="19" height="17"></li>
@@ -99,17 +109,25 @@
           <span class="rating">Рейтинг:8,5</span>
         </div>
       </li>
-      <li>
-        <a href="#"><img src="img/desert.jpg" width="135" height="90" alt="Desert Quail Inn"></a>
-        <a href="#">
-          <h2 class="hotel-items">Desert Quail Inn</h2>
-        </a>
-        <span>Мотель</span>
-        <span>от 3000 р</span>
-        <button class="detail-button text-white" type="button">Подробнее</button>
-        <button class="booking-button text-white" type="button">Забронировать</button>
+      <li class="hotel-desert">
+        <div class="desert">
+          <a href="#">
+            <img src="img/desert.jpg" class="photo-desert" width="135" height="90" alt="Desert Quail Inn">
+          </a>
+          <div class="info-desert">
+            <a href="#">
+              <h2 class="hotel-items">Desert Quail Inn</h2>
+            </a>
+            <div class="desert-span">
+              <span>Мотель</span>
+              <span>от 3000 р</span>
+              <button class="detail-button text-white" type="button">Подробнее</button>
+              <button class="booking-button text-white" type="button">Забронировать</button>
+            </div>
+          </div>
+        </div>
         <div class="hotel-rating">
-          <ul class="stars">
+          <ul class="desert-stars">
             <li><img src="#" width="19" height="17"></li>
             <li><img src="#" width="19" height="17"></li>
             <li><img src="#" width="19" height="17"></li>
@@ -117,17 +135,25 @@
           <span class="rating">Рейтинг:8,9</span>
         </div>
       </li>
-      <li>
-        <a href="#"><img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo"></a>
-        <a href="#">
-          <h2 class="hotel-items">Villas at Poco Diablo</h2>
-        </a>
-        <span>Апартаменты</span>
-        <span>от 2000 р</span>
-        <button class="detail-button text-white" type="button">Подробнее</button>
-        <button class="booking-button text-white" type="button">Забронировать</button>
+      <li class="hotel-villas">
+        <div class="villas">
+          <a href="#">
+            <img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo">
+          </a>
+          <div class="info-villas">
+            <a href="#">
+              <h2 class="hotel-items">Villas at Poco Diablo</h2>
+            </a>
+            <div class="villas-span">
+              <span>Апартаменты</span>
+              <span>от 2000 р</span>
+              <button class="detail-button text-white" type="button">Подробнее</button>
+              <button class="booking-button text-white" type="button">Забронировать</button>
+            </div>
+          </div>
+        </div>
         <div class="hotel-rating">
-          <ul class="stars">
+          <ul class="villas-stars">
             <li><img src="#" width="19" height="17"></li>
             <li><img src="#" width="19" height="17"></li>
           </ul>
@@ -137,10 +163,9 @@
     </ul>
   </main>
   <footer class="main-footer">
-
     <div class="contacts">
-      <p class="contacts-text">#visitsedona</p>
-      <p class="contacts-text">тел:
+      <p class="hashtag">#visitsedona</p>
+      <p class="telephone">тел:
         <a href="tel:+7(495)666-01-66" class="contacts-link"> +7(495)666-01-66</a>
       </p>
     </div>
@@ -158,7 +183,7 @@
     </ul>
 
     <div class="author">
-      <span class="author">Website by:</span>
+      <span class="website-by">Website by:</span>
       <a href="https://htmlacademy.ru/intensive/htmlcss" class="author-link"><img src="img/logo-htmlacademy.svg"
           alt="Логотип HTML академии"></a>
     </div>
