--- a/hotels.html
+++ b/hotels.html
@@ -12,17 +12,16 @@
 <body class="page-body">
   <header class="main-header">
     <nav class="navigation">
-      <a class="main-header-logo" href="index.html">
-        <img src="img/logo.png" width="138" height="70" alt="Логотип сайта городка Седона">
-      </a>
-      <div class="main-header-bar">
-        <ul class="site-navigation">
-          <li><a href="#" class="site-navigation-link">Информация</a></li>
-          <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
-          <li><a href="#" class="site-navigation-link">Карта штата</a></li>
-          <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
-        </ul>
-      </div>
+
+      <ul class="site-navigation">
+        <li><a href="#" class="site-navigation-link">Информация</a></li>
+        <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.png" width="138" height="70" alt="Логотип сайта городка Седона">
+        </a>
+        <li><a href="#" class="site-navigation-link">Карта штата</a></li>
+        <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -82,25 +81,25 @@
       </ul>
     </div>
     <ul class="hotel-results">
-      <li class="hotel-amara">
-        <div class="amara">
+      <li class="">
+        <div class="">
           <a href="#">
-            <img src="img/amara.jpg" class="photo-amara" width="135" height="90" alt="Amara Resort & Spa">
+            <img src="img/amara.jpg" class="hotel-photo" width="135" height="90" alt="Amara Resort & Spa">
           </a>
-          <div class="info-amara">
+          <div class="">
             <a href="#">
               <h2 class="hotel-items">Amara Resort & Spa</h2>
             </a>
-            <div class="amara-span">
-              <span>Гостиница</span>
-              <span>от 4000 р</span>
+            <div class="">
+              <span class="hotel-type">Гостиница</span>
+              <span class="hotel-price">от 4000 р</span>
               <button class="detail-button" type="button">Подробнее</button>
               <button class="booking-button" type="button">Забронировать</button>
             </div>
           </div>
         </div>
         <div class="hotel-rating">
-          <ul class="amara-stars">
+          <ul class="stars-4">
             <li><img src="#" width="19" height="17"></li>
             <li><img src="#" width="19" height="17"></li>
             <li><img src="#" width="19" height="17"></li>
@@ -109,25 +108,25 @@
           <span class="rating">Рейтинг:8,5</span>
         </div>
       </li>
-      <li class="hotel-desert">
-        <div class="desert">
+      <li class="">
+        <div class="">
           <a href="#">
-            <img src="img/desert.jpg" class="photo-desert" width="135" height="90" alt="Desert Quail Inn">
+            <img src="img/desert.jpg" class="hotel-photo" width="135" height="90" alt="Desert Quail Inn">
           </a>
-          <div class="info-desert">
+          <div class="">
             <a href="#">
               <h2 class="hotel-items">Desert Quail Inn</h2>
             </a>
-            <div class="desert-span">
-              <span>Мотель</span>
-              <span>от 3000 р</span>
+            <div class="">
+              <span class="hotel-type">Мотель</span>
+              <span class="hotel-price">от 3000 р</span>
               <button class="detail-button text-white" type="button">Подробнее</button>
               <button class="booking-button text-white" type="button">Забронировать</button>
             </div>
           </div>
         </div>
         <div class="hotel-rating">
-          <ul class="desert-stars">
+          <ul class="stars-3">
             <li><img src="#" width="19" height="17"></li>
             <li><img src="#" width="19" height="17"></li>
             <li><img src="#" width="19" height="17"></li>
@@ -135,25 +134,25 @@
           <span class="rating">Рейтинг:8,9</span>
         </div>
       </li>
-      <li class="hotel-villas">
-        <div class="villas">
+      <li class="">
+        <div class="">
           <a href="#">
-            <img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo">
+            <img src="img/villas.jpg" class="hotel-photo" width="135" height="90" alt="Villas at Poco Diablo">
           </a>
-          <div class="info-villas">
+          <div class="">
             <a href="#">
               <h2 class="hotel-items">Villas at Poco Diablo</h2>
             </a>
-            <div class="villas-span">
-              <span>Апартаменты</span>
-              <span>от 2000 р</span>
+            <div class="">
+              <span class="hotel-type">Апартаменты</span>
+              <span class="hotel-price">от 2000 р</span>
               <button class="detail-button text-white" type="button">Подробнее</button>
               <button class="booking-button text-white" type="button">Забронировать</button>
             </div>
           </div>
         </div>
         <div class="hotel-rating">
-          <ul class="villas-stars">
+          <ul class="stars-2">
             <li><img src="#" width="19" height="17"></li>
             <li><img src="#" width="19" height="17"></li>
           </ul>
