--- a/index.html
+++ b/index.html
@@ -12,23 +12,22 @@
 <body class="page-body">
   <header class="main-header">
     <nav class="navigation">
-      <a class="main-header-logo" href="index.html">
-        <img src="img/logo.png" width="138" height="70" alt="Логотип сайта городка Седона">
-      </a>
-     
-        <ul class="site-navigation">
-          <li><a href="#" class="site-navigation-link">Информация</a></li>
-          <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
-          <li><a href="#" class="site-navigation-link">Карта штата</a></li>
-          <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
-        </ul>
-          </nav>
+
+      <ul class="site-navigation">
+        <li><a href="#" class="site-navigation-link">Информация</a></li>
+        <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.png" width="138" height="70" alt="Логотип сайта городка Седона">
+        </a>
+        <li><a href="#" class="site-navigation-link">Карта штата</a></li>
+        <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main class="container">
     <div class="container-photo-title">
-      <img class="welcome" src="img/welcome.png"
-        alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
+      <img class="welcome" src="img/welcome.png" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
     </div>
     <div class="main-title">
       <h1 class="main-content-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
@@ -93,20 +92,20 @@
       <p class="booking-text text-grey">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
         гостиниц в Седоне
       </p>
-      <form action="#" method="GET">
+      <form class="booking-form" action="#" method="GET">
         <label class="search-form text-white">Поиск гостиницы в Седоне</label>
         <p>
-          <label>Дата заезда:</label>
+          <label class="booking-item">Дата заезда:</label>
           <input type="text" id="date" name="data" value="24 апреля 2017">
         </p>
         <p>
-          <label>Дата выезда:</label>
+          <label class="booking-item">Дата выезда:</label>
           <input type="text" id="date" name="data" value="04 июля 2017">
         </p>
         <p>
-          <label>Взрослые:</label>
+          <label class="booking-item">Взрослые:</label>
           <input type="number" value="2">
-          <label>Дети:</label>
+          <label class="booking-item">Дети:</label>
           <input type="number" value="0">
         </p>
         <button class="find-button text-white" type="button">Найти</button>
